# prime-rl

./: CHANGELOG.md  pyproject.toml
.github/workflows/: cpu_tests.yaml
configs/ci/integration/reverse_text_multi_run/: orchestrator.toml
configs/debug/hendrycks_sanity/: rl.toml
configs/debug/v1/: alphabet_sort.toml  general_agent.toml
configs/general_agent/: rl_qwen3_0p6b.toml  rl_qwen3_30b_a3b.toml  rl_qwen3_4b.toml
configs/glm45air/: swe.toml  terminal.toml
configs/glm5.2_16node_llmd/: inference.toml
configs/gsm8k/: rl.toml
configs/hendrycks_math/: rl.toml
configs/nemotron_4node/: rl.toml
configs/nemotron_debug/: rl.toml
configs/wordle/: rl.toml
docs/: advanced.md  algorithms.md  configuration.md  full-vocab-opd.md  inference.md  mint.json  olmo3-sink.md  overview.md  scaling.md  training.md
examples/alphabet_sort/: rl.toml
examples/glm5_llmd/: rl.toml
examples/glm5_pd_disag/: rl.toml
examples/intellect-3.1/: README.md  rl.toml
examples/minimax_m2.5_swe/: rl.toml
examples/multinode/: rl.toml
examples/qwen30b_swe/: rl.toml
examples/wiki_search/: rl.toml
examples/wordle/: rl.toml
scripts/: export_sft.py
skills/training/monitor-run/: SKILL.md
src/prime_rl/entrypoints/: inference.py  rl.py
src/prime_rl/inference/: patches.py  server.py
src/prime_rl/inference/vllm/: server.py  serving_tokens.py
src/prime_rl/inference/vllm/worker/: __init__.py  filesystem.py  hidden_states.py  nccl.py  weight_transfer.py
src/prime_rl/orchestrator/: ckpt.py  dispatcher.py  envs.py  eval_sink.py  orchestrator.py  train_sink.py  train_source.py  trajectories.py  types.py  utils.py  watcher.py
src/prime_rl/orchestrator/algo/: base.py  echo.py  opd.py  opsd.py
src/prime_rl/templates/: inference.sbatch.j2  multi_node_rl.sbatch.j2  multi_node_sft.sbatch.j2
src/prime_rl/trainer/: batch.py  model.py  optim.py  perf.py
src/prime_rl/trainer/models/: __init__.py  fp8.py
src/prime_rl/trainer/models/layers/: attn.py  deep_gemm_backend.py  fp8_grouped_gemm.py  fp8_linear.py  lm_head.py  rotary_emb.py  ulysses_attn.py
src/prime_rl/trainer/models/olmo3_sink/: attention.py  converting_olmo3_sink.py  fa3_sink_kernel.py  grad_check.py  magi_sink.py  modeling_olmo3_sink.py  native_fa3_sink.py  register.py  vllm_adapter.py  vllm_dflash_adapter.py
src/prime_rl/trainer/models/qwen3_5/: __init__.py  modeling_qwen3_5.py
src/prime_rl/trainer/models/qwen3_5_moe/: modeling_qwen3_5_moe.py
src/prime_rl/trainer/rl/: data.py  packer.py  train.py
src/prime_rl/trainer/rl/broadcast/: filesystem.py  nccl.py
src/prime_rl/trainer/sft/: data.py  train.py
src/prime_rl/transport/: __init__.py  filesystem.py  hidden_state_codec.py  hidden_state_files.py  kernel_weights.py  types.py
src/prime_rl/utils/: chat_template.py  client.py  cp.py  elastic.py  logger.py  pathing.py  utils.py
src/prime_rl/utils/monitor/: __init__.py  prime.py  wandb.py
tests/manual/: olmo3_sink_cp_parity.py  olmo3_sink_fa3_parity.py  olmo3_sink_fa4_parity.py  olmo3_sink_magi_kernel.py  validate_vllm_hidden_states.py
tests/unit/: test_configs.py
tests/unit/inference/: test_dp_worker_ports.py  test_hidden_state_capture.py  test_serving_tokens.py
tests/unit/orchestrator/: test_advantage.py  test_algorithms.py  test_dispatcher_question_limit.py  test_filters.py  test_prefill_logprobs.py
tests/unit/train/: test_full_vocab_opd.py  test_model_buffer_reinit.py
tests/unit/train/models/: test_deep_gemm_backend.py  test_fp8_linear.py  test_olmo3_sink_conversion.py  test_olmo3_sink_cp.py  test_olmo3_sink_magi.py  test_olmo3_sink_native_fa3.py  test_qwen3_5.py
tests/unit/train/rl/: test_filesystem_broadcast.py  test_packer.py
tests/unit/train/sft/: test_local_dataset.py  test_sft_dataset.py
tests/unit/transport/: test_hidden_state_files.py  test_kernel_weights.py
tests/unit/utils/: test_client.py  test_prime_monitor.py  test_wandb_proof_opd.py
